# neuroagent

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  neuroagent_framework_infrastructure.md  pyproject.toml
app/: __init__.py  auth.py  dependencies.py  main.py  model_gateway.py  settings.py  use_cases.py
app/api/: routes_agents.py  routes_approvals.py  routes_autoresearch.py  routes_documents.py  routes_domains.py  routes_evals.py  routes_evaluate.py  routes_models.py  routes_obsidian.py  routes_runs.py  routes_storage.py  routes_tools.py  routes_use_cases.py
app/autoresearcher/: pipeline.py  schemas.py
app/contracts/: agent_contract.py  artifact_contract.py  domain_contract.py  eval_contract.py  loop_contract.py  tool_contract.py  validation.py  workflow_contract.py
app/core/: approvals.py  artifacts.py  errors.py  executor.py  idempotency.py  intent_router.py  orchestrator.py  (+3 more)
docs/: agent-contract.md  api-guide.md  api-spec.md  architecture.md  autoresearcher-layer.md  domain-stack.md  evals.md  obsidian-layer.md  openapi.json  roadmap.md  security.md  user-guide.md  user-test-scenarios.md
examples/: cybersecurity_sigma_request.json  obsidian_note_output.md  productivity_weekly_review.json  research_agent_run.json
scripts/: ingest_docs.py  init_db.py  pull_ollama_models.sh  run_eval_suite.py  seed_domains.py
tests/: test_agent_contracts.py  test_api_documentation.py  test_api_health.py  test_api_key_auth.py  test_artifact_storage.py  test_autoresearch_api.py  test_autoresearcher_pipeline.py  test_comprehensive_foundation.py  test_contract_validation_and_approvals.py  test_evals_runner.py  test_file_tools.py  test_github_tools.py  test_llm_judge.py  test_loop_engineering.py  test_model_gateway_runtime.py  test_model_provider_gateways.py  test_new_implementation_edges.py  test_obsidian_adapter.py  test_persistence_backends.py  test_rag_pipeline.py  test_rag_tools.py  test_runtime.py  test_step_executor_flow.py  test_tool_policy.py  test_tool_registry_handlers.py  test_trace_persistence.py  test_use_cases_api.py
(+74 files in other folders)
