[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroagent-framework"
version = "0.2.0"
description = "Governed runtime for domain-specific AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  # psycopg2 is the driver SQLAlchemy loads for a bare ``postgresql://`` URL.
  # We normalize URLs to ``postgresql+psycopg://`` (psycopg3), but shipping
  # psycopg2-binary too is a permanent safety net: if ANY code path or env
  # value ever yields a bare ``postgresql://`` again, the app still connects
  # instead of dying with "No module named 'psycopg2'".
  "psycopg2-binary>=2.9",
  "httpx>=0.27",
  "boto3>=1.34"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
